--- a/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
+++ b/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
@@ -4,7 +4,7 @@
         <span class="discussionTitle">@Model.Discussion.Title Discussion</span>
         <div class="sectionHeading">
 
-            @*If the user is verified as a memeber, give them the ability to add a new post, by showing the post button*@
+            @*If the user is verified as a member, give them the ability to add a new post, by showing the post button*@
 
             @if (Context.User.Identity.IsAuthenticated)
             {
@@ -65,13 +65,10 @@
                                         </span>
 
                                         <div class="deletePost">
-                                            @if (!User.Identity.IsAuthenticated)
+                                            @if (User.Identity.IsAuthenticated)
 
                                             {
-                                                @Html.ActionLink("Delete", "DeletePost",
-                                                    new { id = post.Id, Controller = "Post" })
-                                                <i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeletePost", "Post", new { id = post.Id })';return false;" />
-
+                                                <a><i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeletePost", "Post", new { id = post.Id })'"></i></a>
                                             }
                                         </div>
 
