--- a/BookClub/Views/Community/Index.cshtml
+++ b/BookClub/Views/Community/Index.cshtml
@@ -40,7 +40,7 @@
                             {
                                 <span>No Replies</span>
                             }
-                            else
+                            else if(post.RepliesCount >1)
                             {
                                 <span>@post.RepliesCount Replies</span>
                             }
