--- a/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
+++ b/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
@@ -1,4 +1,5 @@
-﻿@model BookClub.ViewModels.JointViewModels.DiscussionPostViewModel
+﻿@using Microsoft.AspNet.Identity
+@model BookClub.ViewModels.JointViewModels.DiscussionPostViewModel
 <div class="container body-content">
     <div class="row sectionHeader">
         <span class="discussionTitle">@Model.Discussion.Title Discussion</span>
@@ -28,7 +29,9 @@
                     <p>
                         <span>
                             You must be a
-                            @Html.ActionLink("registered member", "Register", "Account")
+                            @Html.ActionLink("Registered Member", "Register", "Account", routeValues: null, htmlAttributes: new {id = "registerLink"})
+                        @*returnUrl = Url.Action("GetPostsByDiscussion", "Discussion", Model.Discussion.Id) })*@
+                            or @Html.ActionLink("Login", "Login", "Account", new { returnUrl = Request.Url.PathAndQuery }, null)
                             to create a new post
                         </span>
                     </p>
@@ -41,68 +44,69 @@
         @if (Model.Posts.Any())
         {
 
-        <table class="table table-hover table-bordered" id="discussionPage">
-            <tbody>
-                @foreach (var post in Model.Posts)
+            <table class="table table-hover table-bordered" id="discussionPage">
+                <tbody>
+                    @foreach (var post in Model.Posts)
 
-                {
-                    <tr class="Search">
-                        <td>
-                            <div class="postData">
-                                <div class="postTitle">
-                                    @Html.ActionLink(post.Title, "GetPost",
+                    {
+                        <tr class="Search">
+                            <td>
+                                <div class="postData">
+                                    <div class="postTitle">
+                                        @Html.ActionLink(post.Title, "GetPost",
 
-                                     new { id = post.Id, Controller = "Post" })
-                                </div>
+                                         new { id = post.Id, Controller = "Post" })
+                                    </div>
 
-                                <div class="discussionSubtitle">
-                                    <div>
+                                    <div class="discussionSubtitle">
+                                        <div>
 
-                                        <span class="postAuthor">
-                                            @Html.ActionLink(post.AuthorName, "Detail",
+                                            <span class="postAuthor">
+                                                @Html.ActionLink(post.AuthorName, "Detail",
 
-                                             new { id = post.AuthorId, Controller = "Profile" })
-                                        </span>
+                                                 new { id = post.AuthorId, Controller = "Profile" })
+                                            </span>
 
-                                        <div class="deletePost">
-                                            @if (User.Identity.IsAuthenticated)
+                                            <div class="deletePost">
+                                                @if (post.AuthorId == User.Identity.GetUserId())
 
-                                            {
-                                                <a><i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeletePost", "Post", new { id = post.Id })'"></i></a>
-                                            }
+                                                {
+                                                    <a><i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeletePost", "Post", new { id = post.Id })'"></i></a>
+                                                }
+                                            </div>
+
                                         </div>
-
                                     </div>
                                 </div>
-                            </div>
-                        </td>
+                            </td>
 
-                        <td>
-                            <div class="discussionPostCount">
-                             Replies: @post.RepliesCount
-                            </div>
-                        </td>
+                            <td>
+                                <div class="discussionPostCount">
+                                    Replies: @post.RepliesCount
+                                </div>
+                            </td>
 
-                        <td>
-                            <div class="postDate">@post.DatePosted</div>
-                        </td>
-                        
-                    </tr>
+                            <td>
+                                <div class="postDate">@post.DatePosted</div>
+                            </td>
 
-                }
+                        </tr>
 
-            </tbody>
+                    }
 
-        </table>
-        
+                </tbody>
+
+            </table>
+
         }
-
-        else
+        
+        else if (User.Identity.IsAuthenticated)
         {
             <div class="noPosts">
-                <i class="material-icons md-72">question_asnwer</i>
+                <i class="material-icons md-72">question_answer</i>
             </div>
             <h4>
+
                 It looks like there are no @Model.Discussion.Title posts yet. <br />
                 Why not
 
@@ -112,27 +116,27 @@
                 one?
             </h4>
         }
-        </div>
+    </div>
 
 </div>
 
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script>
     $(document).ready(function () {
-        function Contains(text_one, text_two) {
-            if (text_one.indexOf(text_two) != -1)
-                return true;
-        }
+            function Contains(text_one, text_two) {
+                if (text_one.indexOf(text_two) != -1)
+                    return true;
+            }
         $("#Search").keyup(function () {
-            var searchText = $("#Search").val().toLowerCase();
+                var searchText = $("#Search").val().toLowerCase();
             $(".Search").each(function () {
-                if (!Contains($(this).text().toLowerCase(), searchText)) {
+                    if (!Contains($(this).text().toLowerCase(), searchText)) {
                     $(this).hide();
-                }
-                else {
+                    }
+                    else {
                     $(this).show();
-                }
-            })
+                    }
+                })
 
         })
     });
