--- a/BookClub/Views/Author/GetAuthor.cshtml
+++ b/BookClub/Views/Author/GetAuthor.cshtml
@@ -29,7 +29,11 @@
          </div>
     </div>
 
+    <div class="partialBooks">
         @Html.Partial("~/Views/Author/GetBooksbyAuthor.cshtml", Model.Books)
+    </div>
+
+        
 
         
    
