--- a/BookClub/Views/Review/DeleteReview.cshtml
+++ b/BookClub/Views/Review/DeleteReview.cshtml
@@ -48,6 +48,8 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
+        @Html.HiddenFor(review => review.Book.Id)
+
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
