--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -4,13 +4,14 @@
     <strong>Sign Up Today:</strong> @Html.ActionLink("Join Our Community", "Register", "Account")
 </div>
 
+@*Only allows Admin to Add a Book*@
 @if (User.IsInRole("Admin"))
 {
-    <div class="row" id="postReplyRow">
+    <div class="row" id="addBookRow">
         <span>
-            @Html.ActionLink("Add Book", "AddBook", "Admin")
+            <button class="btn btn-success" id="addButton" onclick="location.href='@Url.Action("AddBook", "Admin")'">Add Book</button>
+            @*@Html.ActionLink("Add Book", "AddBook", "Admin")*@
         </span>
-
     </div>
 }
 
@@ -54,27 +55,25 @@
             </td>
         </tr>
     }
-    
             else
             {
                 foreach (var item in Model)
                 {
-        <tr>
-
-            <td>
-                <img src="@item.Image" class="imageCell" />
-            </td>
-            <td>
-                @Html.ActionLink(item.Title, "GetBookId",
-                    new { id = item.Id, Controller = "Book" })
-            </td>
-            <td>
-                @Html.ActionLink(item.Author.Name, "GetAuthor",
-                   new { id = item.Author.Id, Controller = "Author" })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre.Name)
-            </td>
+                    <tr>
+                        <td>
+                            <img src="@item.Image" class="imageCell" />
+                        </td>
+                        <td>
+                        @Html.ActionLink(item.Title, "GetBookId",
+                           new { id = item.Id, Controller = "Book" })
+                        </td>
+                        <td>
+                        @Html.ActionLink(item.Author.Name, "GetAuthor",
+                           new { id = item.Author.Id, Controller = "Author" })
+                        </td>
+                        <td>
+                        @Html.DisplayFor(modelItem => item.Genre.Name)
+                    </td>
 
             @*Only allows Admin Users to Edit and Delete Books*@
 
@@ -90,6 +89,6 @@
                 }
    
             }
-    </table>
+</table>
 
 
