--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -18,7 +18,7 @@
 
     }))
     {
-        <div class="form-group">
+        <div class="form-group" id="challengeDescription">
             @Html.AntiForgeryToken()
             <p>Add Challenges</p>
             @*@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })*@
