--- a/BookClub/Views/Community/Index.cshtml
+++ b/BookClub/Views/Community/Index.cshtml
@@ -1,22 +1,20 @@
 ﻿@model BookClub.ViewModels.Community.CommunityViewModel
 
-<div class="container body-content">
-    <div class="col-md-6 frontpage">
-        <div class="frontheading">Welcome to our BookClub Community</div>
-        <p class="subheading">Join the latest discussions about the books you love</p>
-
-        <div>
-            <input type="text" id="Search" value="Search" placeholder="Search..." class="searchBar" onfocus="clearThis(this)" />
-                <button type="submit" class="btn btn-discussionSearch">
-                    <i class="material-icons">search</i>
-                </button>
-        </div>
-
+<div class="container">
+    <div class="recentHeading">
+        <div class="recentTitle">Welcome to the <b>MyBookPal</b> Community</div>
+        <span class="recentSubtitle">Join the latest discussions about the books you love</span>
     </div>
-</div>
 
 <div class="row communityContent">
-    <h3>Recent Posts</h3>
+    <h3 id="recentTitle2">Recent Posts</h3>
+    <div>
+        <input type="text" id="Search" value="Search" placeholder="Search..." class="searchBar" onfocus="clearThis(this)" />
+        <button type="submit" class="btn btn-discussionSearch">
+            <i class="material-icons">search</i>
+        </button>
+    </div>
+
     <table class="table table-hover" id="recentPostsTable">
         <tbody>
 
@@ -40,7 +38,7 @@
                             {
                                 <span>No Replies</span>
                             }
-                            else if(post.RepliesCount >1)
+                            else if (post.RepliesCount > 1)
                             {
                                 <span>@post.RepliesCount Replies</span>
                             }
@@ -62,6 +60,7 @@
         </tbody>
     </table>
 </div>
+    </div>
 
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script>
