--- a/BookClub/Views/Review/GetReviewByBook.cshtml
+++ b/BookClub/Views/Review/GetReviewByBook.cshtml
@@ -1,11 +1,15 @@
 ﻿@model IEnumerable<BookClub.ViewModels.Review.ReviewViewModel>
 
-<div class="container-fluid">
+<div class="container">
     <div class="reviewHeader">
-            <h3>Reviews</h3>
+        <div class="reviewHeading">
+            <span class="reviewTitle">
+                Reviews
+            </span>
+        </div>
     </div>
 
-<script type="text/javascript">
+        <script type="text/javascript">
     function CRateOut(rating) {
         for (var i = 1; i <= rating; i++) {
             $("#span" + i).attr('class', 'glyphicon glyphicon-star-empty');
@@ -44,56 +48,53 @@
             return false;
         }
     }
-</script>
+        </script>
 
-    @if (Model.Any())
-    {
-        foreach (var item in Model)
+        @if (Model.Any())
         {
-           @Html.Partial("_ReviewContentPartial", item)
+            foreach (var item in Model)
+            {
+                @Html.Partial("_ReviewContentPartial", item)
+            }
         }
-    }
-        else if(!User.Identity.IsAuthenticated)
+        else if (!User.Identity.IsAuthenticated)
         {
-
-        <p>There are no reviews yet, become a @Html.ActionLink("Registered member", "Register", "Account", new { returnUrl = Request.Url.PathAndQuery }, null) or  @Html.ActionLink("Login", "Login", "Account", new { returnUrl = Request.Url.PathAndQuery }, null)  </p>
+            <p>There are no reviews yet, become a @Html.ActionLink("Registered member", "Register", "Account", new { returnUrl = Request.Url.PathAndQuery }, null) or  @Html.ActionLink("Login", "Login", "Account", new { returnUrl = Request.Url.PathAndQuery }, null)  </p>
         }
-        else if(User.Identity.IsAuthenticated)
+        else if (User.Identity.IsAuthenticated)
         {
-         <p>There are no reviews yet, why not <b>create one</b> below</p>
-         
+            <p>There are no reviews yet, why not <b>create one</b> below</p>
         }
 
+        <h3 class="reviewCommentTitle">Please enter your comments</h3>
 
-<h3>Please enter your comments</h3>
+        @using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new { onsubmit = "return VerifyRating()" }))
+        {
+            @*Creates text area for the user to leave a review*@
 
-@using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new { onsubmit = "return VerifyRating()" }))
-{
-    @*Creates text area for the user to leave a review*@
+            <textarea rows="6" cols="100" name="bookContent" id="txtBookContent"></textarea>
 
-    <textarea rows="6" cols="50" name="bookContent" id="txtBookContent"></textarea>
+            @*Displays 5 stars which the user can click*@
 
-    @*Displays 5 stars which the user can click*@
+            <div onmouseout="CRateSelected()" id="starRating">
+                <span id="span1" onmouseout="CRateOut(1)" onmouseover="CRateOver(1)" onclick="CRateClick(1)" class="glyphicon glyphicon-star-empty"></span>
+                <span id="span2" onmouseout="CRateOut(2)" onmouseover="CRateOver(2)" onclick="CRateClick(2)" class="glyphicon glyphicon-star-empty"></span>
+                <span id="span3" onmouseout="CRateOut(3)" onmouseover="CRateOver(3)" onclick="CRateClick(3)" class="glyphicon glyphicon-star-empty"></span>
+                <span id="span4" onmouseout="CRateOut(4)" onmouseover="CRateOver(4)" onclick="CRateClick(4)" class="glyphicon glyphicon-star-empty"></span>
+                <span id="span5" onmouseout="CRateOut(5)" onmouseover="CRateOver(5)" onclick="CRateClick(5)" class="glyphicon glyphicon-star-empty"></span>
+            </div>
 
-    <div onmouseout="CRateSelected()" id="starRating">
-        <span id="span1" onmouseout="CRateOut(1)" onmouseover="CRateOver(1)" onclick="CRateClick(1)" class="glyphicon glyphicon-star-empty"></span>
-        <span id="span2" onmouseout="CRateOut(2)" onmouseover="CRateOver(2)" onclick="CRateClick(2)" class="glyphicon glyphicon-star-empty"></span>
-        <span id="span3" onmouseout="CRateOut(3)" onmouseover="CRateOver(3)" onclick="CRateClick(3)" class="glyphicon glyphicon-star-empty"></span>
-        <span id="span4" onmouseout="CRateOut(4)" onmouseover="CRateOver(4)" onclick="CRateClick(4)" class="glyphicon glyphicon-star-empty"></span>
-        <span id="span5" onmouseout="CRateOut(5)" onmouseover="CRateOver(5)" onclick="CRateClick(5)" class="glyphicon glyphicon-star-empty"></span>
-    </div>
+            <div>
+                <input type="hidden" name="rating" id="labelRating" value="0" />
+            </div>
+            <div>
+                <input type="hidden" name="id" id="labelRating" value="@ViewBag.BookId" />
+            </div>
 
-    <div>
-        <input type="hidden" name="rating" id="labelRating" value="0" />
-    </div>
-    <div>
-        <input type="hidden" name="id" id="labelRating" value="@ViewBag.BookId" />
-    </div>
+            @* Adds a Submit button which redirects to reviews page *@
+            <div>
+                <input type="submit" class="btn btn-primary active" name="SaveReview" value="Save Review" id="reviewSubmit" />
+            </div>
 
-    @* Adds a Submit button which redirects to reviews page *@
-    <div>
-        <input type="submit" class="btn btn-primary active" name="SaveReview" value="Save Review" />
-    </div>
-
-}
+        }
     </div>
